--- a/logo/draw_logo.ipynb
+++ b/logo/draw_logo.ipynb
@@ -29,43 +29,90 @@
     "\n",
     "\n",
     "def gaussian(x, mu, sig, scale):\n",
-    "    return np.exp(-np.power(x - mu, 2.) / (2 * np.power(sig, 2.))) * scale\n",
+    "    return np.exp(-np.power(x - mu, 2.0) / (2 * np.power(sig, 2.0))) * scale\n",
     "\n",
     "\n",
     "# set background color to white\n",
-    "plt.rcParams['figure.facecolor'] = 'white'\n",
+    "plt.rcParams[\"figure.facecolor\"] = \"white\"\n",
     "\n",
     "# remove frame\n",
     "ax = plt.gca()\n",
-    "ax.spines['top'].set_visible(False)\n",
-    "ax.spines['right'].set_visible(False)\n",
-    "ax.spines['bottom'].set_visible(False)\n",
-    "ax.spines['left'].set_visible(False)\n",
+    "ax.spines[\"top\"].set_visible(False)\n",
+    "ax.spines[\"right\"].set_visible(False)\n",
+    "ax.spines[\"bottom\"].set_visible(False)\n",
+    "ax.spines[\"left\"].set_visible(False)\n",
     "\n",
     "# remove ticks\n",
     "plt.tick_params(\n",
-    "    axis='both',\n",
-    "    which='both',\n",
+    "    axis=\"both\",\n",
+    "    which=\"both\",\n",
     "    bottom=False,\n",
     "    top=False,\n",
     "    left=False,\n",
     "    right=False,\n",
     "    labelbottom=False,\n",
-    "    labelleft=False\n",
+    "    labelleft=False,\n",
     ")\n",
     "\n",
     "x = np.linspace(-10, 3, 500)\n",
     "\n",
-    "plt.fill(x, np.clip(gaussian(x, 0, 0.6, 0.8) + gaussian(x, -7, 0.8, 0.5) + gaussian(x, -3.5, 1.2, 1), 0.05, None), lw=0, color='#ECB365', alpha=0.4)\n",
+    "plt.fill(\n",
+    "    x,\n",
+    "    np.clip(\n",
+    "        gaussian(x, 0, 0.6, 0.8)\n",
+    "        + gaussian(x, -7, 0.8, 0.5)\n",
+    "        + gaussian(x, -3.5, 1.2, 1),\n",
+    "        0.05,\n",
+    "        None,\n",
+    "    ),\n",
+    "    lw=0,\n",
+    "    color=\"#ECB365\",\n",
+    "    alpha=0.4,\n",
+    ")\n",
     "\n",
-    "plt.fill(x + 0.7, np.clip(gaussian(x, -0., 0.6, 0.8), 0.05, None) - 0.04, lw=0, color='#00A9FF', alpha=0.5)\n",
-    "plt.fill(x + 0.7, np.clip(gaussian(x, -3.6, 1.2,  1), 0.05, None) - 0.04, lw=0, color='#069A8E', alpha=0.5)\n",
-    "plt.fill(x + 0.7, np.clip(gaussian(x, -7, 0.8, 0.48), 0.05, None) - 0.04, lw=0, color='#B983FF', alpha=0.5)\n",
+    "plt.fill(\n",
+    "    x + 0.7,\n",
+    "    np.clip(gaussian(x, -0.0, 0.6, 0.8), 0.05, None) - 0.04,\n",
+    "    lw=0,\n",
+    "    color=\"#00A9FF\",\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.fill(\n",
+    "    x + 0.7,\n",
+    "    np.clip(gaussian(x, -3.6, 1.2, 1), 0.05, None) - 0.04,\n",
+    "    lw=0,\n",
+    "    color=\"#069A8E\",\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.fill(\n",
+    "    x + 0.7,\n",
+    "    np.clip(gaussian(x, -7, 0.8, 0.48), 0.05, None) - 0.04,\n",
+    "    lw=0,\n",
+    "    color=\"#B983FF\",\n",
+    "    alpha=0.5,\n",
+    ")\n",
     "\n",
-    "plt.text(4, 0.6, 'DARA  ', fontsize=96, color='#1B4242', ha='left', va='center', fontdict={'weight': 'bold'})\n",
-    "plt.text(4.2, 0.2, 'Data-driven automated Rietveld analysis\\nfor phase search and refinement', fontsize=28, color='#5C8374', ha='left', va='center')\n",
+    "plt.text(\n",
+    "    4,\n",
+    "    0.6,\n",
+    "    \"DARA  \",\n",
+    "    fontsize=96,\n",
+    "    color=\"#1B4242\",\n",
+    "    ha=\"left\",\n",
+    "    va=\"center\",\n",
+    "    fontdict={\"weight\": \"bold\"},\n",
+    ")\n",
+    "plt.text(\n",
+    "    4.2,\n",
+    "    0.2,\n",
+    "    \"Data-driven automated Rietveld analysis\\nfor phase search and refinement\",\n",
+    "    fontsize=28,\n",
+    "    color=\"#5C8374\",\n",
+    "    ha=\"left\",\n",
+    "    va=\"center\",\n",
+    ")\n",
     "\n",
-    "plt.savefig('dara.jpg', dpi=300, bbox_inches='tight')"
+    "plt.savefig(\"dara.jpg\", dpi=300, bbox_inches=\"tight\")"
    ]
   },
   {
