--- a/notebooks/phase_search.ipynb
+++ b/notebooks/phase_search.ipynb
@@ -15,6 +15,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a5ad0379",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -U ipywidgets"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "ba4f346d",
    "metadata": {},
@@ -90165,7 +90175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
