update jupyter notebook

--- a/notebooks/phase_search.ipynb
+++ b/notebooks/phase_search.ipynb
@@ -10,7 +10,9 @@
     "present in a given XRD pattern.\n",
     "\n",
     "In this tutorial, we will try to identify the phases in one experimental solid-state\n",
-    "reaction sample between `GeO2` and `ZnO`."
+    "reaction sample between `GeO2` and `ZnO`.\n",
+    "\n",
+    "> You can download this tutorial project from [here](https://idocx.github.io/dara/_static/tutorial.zip)."
    ]
   },
   {
