update jupyter notebook

--- a/notebooks/phase_search.ipynb
+++ b/notebooks/phase_search.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -U ipywidgets"
+    "%pip install ipywidgets nbformat"
    ]
   },
   {
