fix the function arg name

--- a/notebooks/phase_search.ipynb
+++ b/notebooks/phase_search.ipynb
@@ -265,7 +265,7 @@
     "    pattern_path=pattern_path,\n",
     "    phases=all_cifs,\n",
     "    wavelength=\"Cu\",\n",
-    "    instrument_name=\"Aeris-fds-Pixcel1d-Medipix3\",\n",
+    "    instrument_profile=\"Aeris-fds-Pixcel1d-Medipix3\",\n",
     ")"
    ]
   },
