--- a/notebooks/phase_search.ipynb
+++ b/notebooks/phase_search.ipynb
@@ -61,8 +61,8 @@
       "Requirement already satisfied: pure-eval in /Users/yuxing/.pyenv/versions/3.9.16/envs/bgmn/lib/python3.9/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (0.2.2)\n",
       "Requirement already satisfied: six>=1.12.0 in /Users/yuxing/.pyenv/versions/3.9.16/envs/bgmn/lib/python3.9/site-packages (from asttokens>=2.1.0->stack-data->ipython>=6.1.0->ipywidgets) (1.16.0)\n",
       "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.3.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m A new release of pip is available: \u001B[0m\u001B[31;49m23.3.2\u001B[0m\u001B[39;49m -> \u001B[0m\u001B[32;49m24.1\u001B[0m\n",
+      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m To update, run: \u001B[0m\u001B[32;49mpip install --upgrade pip\u001B[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -177,13 +177,13 @@
     }
    ],
    "source": [
-    "from dara.structure_db import ICSDDatabase\n",
+    "from dara.structure_db import CODDatabase\n",
     "\n",
     "# The COD database contains methods to filter phases in the chemical system\n",
-    "icsd_database = ICSDDatabase()\n",
+    "cod_database = CODDatabase()\n",
     "\n",
     "# gather reference phases and save them to a directory called \"cifs\"\n",
-    "all_icsd_ids = icsd_database.get_cifs_by_chemsys(chemical_system, dest_dir=\"cifs\")"
+    "all_icsd_ids = cod_database.get_cifs_by_chemsys(chemical_system, dest_dir=\"cifs\")"
    ]
   },
   {
@@ -250,10 +250,10 @@
      "output_type": "stream",
      "text": [
       "2024-06-26 14:30:46,723 INFO dara.search.tree Finished refining 36 phases, with 14 phases removed.\n",
-      "\u001b[36m(_remote_expand_node pid=58061)\u001b[0m 2024-06-26 14:30:46,756 INFO dara.search.tree Expanding node 4ca12eb6-3403-11ef-bdbc-8adca62d6f4b with current phases [], Rwp = None\n",
-      "\u001b[36m(_remote_expand_node pid=58061)\u001b[0m 2024-06-26 14:30:47,937 INFO dara.search.tree Expanding node 5a5bde0c-3403-11ef-ab24-8adca62d6f4b with current phases [RefinementPhase(path=PosixPath('cifs/GeO2_152_(cod_2300365)-0.cif'), params={})], Rwp = 42.15\n",
-      "\u001b[36m(_remote_expand_node pid=58052)\u001b[0m 2024-06-26 14:30:49,892 INFO dara.search.tree Expanding node 5b83ef90-3403-11ef-9b6b-8adca62d6f4b with current phases [RefinementPhase(path=PosixPath('cifs/ZnO_186_(cod_9004178)-0.cif'), params={}), RefinementPhase(path=PosixPath('cifs/Zn2GeO4_148_(cod_9014631)-0.cif'), params={})], Rwp = 44.26\n",
-      "\u001b[36m(_remote_expand_node pid=58054)\u001b[0m 2024-06-26 14:30:51,613 INFO dara.search.tree Expanding node 5c7ff312-3403-11ef-b006-8adca62d6f4b with current phases [RefinementPhase(path=PosixPath('cifs/GeO2_152_(cod_2300365)-0.cif'), params={}), RefinementPhase(path=PosixPath('cifs/ZnO_186_(cod_9004178)-0.cif'), params={}), RefinementPhase(path=PosixPath('cifs/Zn2GeO4_148_(cod_9014631)-0.cif'), params={})], Rwp = 12.04\n"
+      "\u001B[36m(_remote_expand_node pid=58061)\u001B[0m 2024-06-26 14:30:46,756 INFO dara.search.tree Expanding node 4ca12eb6-3403-11ef-bdbc-8adca62d6f4b with current phases [], Rwp = None\n",
+      "\u001B[36m(_remote_expand_node pid=58061)\u001B[0m 2024-06-26 14:30:47,937 INFO dara.search.tree Expanding node 5a5bde0c-3403-11ef-ab24-8adca62d6f4b with current phases [RefinementPhase(path=PosixPath('cifs/GeO2_152_(cod_2300365)-0.cif'), params={})], Rwp = 42.15\n",
+      "\u001B[36m(_remote_expand_node pid=58052)\u001B[0m 2024-06-26 14:30:49,892 INFO dara.search.tree Expanding node 5b83ef90-3403-11ef-9b6b-8adca62d6f4b with current phases [RefinementPhase(path=PosixPath('cifs/ZnO_186_(cod_9004178)-0.cif'), params={}), RefinementPhase(path=PosixPath('cifs/Zn2GeO4_148_(cod_9014631)-0.cif'), params={})], Rwp = 44.26\n",
+      "\u001B[36m(_remote_expand_node pid=58054)\u001B[0m 2024-06-26 14:30:51,613 INFO dara.search.tree Expanding node 5c7ff312-3403-11ef-b006-8adca62d6f4b with current phases [RefinementPhase(path=PosixPath('cifs/GeO2_152_(cod_2300365)-0.cif'), params={}), RefinementPhase(path=PosixPath('cifs/ZnO_186_(cod_9004178)-0.cif'), params={}), RefinementPhase(path=PosixPath('cifs/Zn2GeO4_148_(cod_9014631)-0.cif'), params={})], Rwp = 12.04\n"
      ]
     }
    ],
