--- a/notebooks/phase_search.ipynb
+++ b/notebooks/phase_search.ipynb
@@ -117,7 +117,7 @@
     "system for the search algorithm. Dara provides `ICSDDatabase` and `CODDatabase` to do\n",
     "the filtering.\n",
     "\n",
-    "In this example, we will use `ICSDDatabase` to download all the phases in the chemical system of `Ge-O-Zn`."
+    "In this example, we will use `CODDatabase` to download all the phases in the chemical system of `Ge-O-Zn`."
    ]
   },
   {
